# candle-holder

./: Cargo.toml  LICENSE-MIT  Makefile  README.md  rust-project.json
candle-holder/: Cargo.toml  README.md
candle-holder-examples/: Cargo.toml  README.md
candle-holder-examples/examples/: llama.rs
candle-holder-examples/examples/chat/: main.rs
candle-holder-examples/examples/feature_extraction_pipeline/: README.md  main.rs
candle-holder-examples/examples/fill_mask_pipeline/: README.md  main.rs
candle-holder-examples/examples/streamed_text_generation/: README.md  main.rs
candle-holder-examples/examples/text_classification_pipeline/: README.md  main.rs
candle-holder-examples/examples/text_generation_pipeline/: README.md  main.rs
candle-holder-examples/examples/token_classification_pipeline/: README.md  main.rs
candle-holder-examples/examples/zero_shot_classification_pipeline/: README.md  main.rs
candle-holder-examples/src/: lib.rs
candle-holder-models/: Cargo.toml  README.md
candle-holder-models/src/: config.rs  from_pretrained.rs  generation.rs  lib.rs  main.rs  model.rs
candle-holder-models/src/generation/: config.rs  generate.rs  mod.rs  penalties.rs  sampling.rs  stopping_criteria.rs  token_streamer.rs
candle-holder-models/src/models/: mod.rs
candle-holder-models/src/models/bert/: config.rs  mod.rs  modeling.rs
candle-holder-models/src/models/llama/: config.rs  mod.rs  modeling.rs
candle-holder-models/src/models/roberta/: config.rs  mod.rs  modeling.rs
candle-holder-models/src/utils/: attn_mask.rs  cache.rs  flash_attn.rs  mod.rs  rope.rs  var_builder.rs
candle-holder-pipelines/: Cargo.toml  README.md
candle-holder-pipelines/src/: feature_extraction.rs  fill_mask.rs  lib.rs  text_classification.rs  text_generation.rs  token_classification.rs  zero_shot_classification.rs
candle-holder-serve/: Cargo.toml  Dockerfile  Dockerfile.cuda  README.md  entrypoint-cuda.sh  entrypoint.sh
candle-holder-serve/src/: cli.rs  inference_endpoint.rs  main.rs  responses.rs  router_macro.rs  workers.rs
candle-holder-serve/src/routes/: feature_extraction.rs  fill_mask.rs  mod.rs  text_classification.rs  text_generation.rs  token_classification.rs  zero_shot_classification.rs
candle-holder-tokenizers/: Cargo.toml  README.md
candle-holder-tokenizers/src/: chat_template.rs  config.rs  encoding.rs  from_pretrained.rs  lib.rs  main.rs  tokenizer.rs
candle-holder-tokenizers/src/tokenizers/: bert.rs  llama.rs  roberta.rs
candle-holder/src/: config.rs  error.rs  lib.rs  model.rs  ops.rs  utils.rs
candle-holder/src/models/: mod.rs
candle-holder/src/models/bert/: config.rs  mod.rs
candle-holder/src/models/roberta/: mod.rs
candle-holder/src/pipelines/: text_generation.rs  token_classification.rs
candle-holder/src/utils/: from_pretrained.rs  mod.rs  serde.rs
examples/: bert.rs  fill_mask_pipeline.rs  text_classification_pipeline.rs  token_classification_pipeline.rs
rusference-api/: Cargo.toml
rusference-api/src/: main.rs
rusference-model/: Cargo.toml
rusference-model/src/: main.rs
rusference-models/: Cargo.toml
rusference-models/src/: main.rs
rusference-models/src/models/: bert.rs
src/: config.rs  error.rs  lib.rs  main.rs  model.rs  model_factories.rs  model_utils.rs  tokenizer.rs  utils.rs
src/models/: bert.rs  factories.rs  mod.rs  roberta.rs
src/models/bert/: mod.rs  modeling.rs  tokenizer.rs
src/models/llama/: config.rs  mod.rs  modeling.rs  tokenizer.rs
src/models/roberta/: mod.rs  tokenizer.rs
src/pipelines/: fill_mask.rs  mod.rs  text_classification.rs  token_classification.rs  utils.rs  zero_shot_classification.rs
