[workspace]
members = [
    "candle-holder",
    "candle-holder-examples",
    "candle-holder-models",
    "candle-holder-pipelines",
    "candle-holder-tokenizers",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
description = "transformers-like library for Rust using candle"
keywords = ["nlp", "transformers", "rust", "candle"]
categories = ["science"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
candle-core = "0.5.1"
candle-nn = "0.5.1"
candle-metal-kernels = "0.5.1"
candle-flash-attn = "0.5.1"
dyn-fmt = "0.4.0"
hf-hub = "0.3.2"
lazy_static = "1.4.0"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
tokenizers = { version = "0.19.1", features = ["http"] }
thiserror = "1.0.61"
