[workspace]
members = [
    "candle-holder",
    "candle-holder-examples",
    "candle-holder-models",
    "candle-holder-pipelines",
    "candle-holder-tokenizers",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
description = "transformers-like library for Rust using candle"
keywords = ["nlp", "transformers", "rust", "candle"]
categories = ["science"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
candle-core = { git = "https://github.com/huggingface/candle", package = "candle-core" }
candle-nn = { git = "https://github.com/huggingface/candle", package = "candle-nn" }
candle-metal-kernels = { git = "https://github.com/huggingface/candle", package = "candle-metal-kernels" }
candle-flash-attn = { git = "https://github.com/huggingface/candle", package = "candle-flash-attn" }
dyn-fmt = "0.4.0"
hf-hub = "0.3.2"
lazy_static = "1.4.0"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
tokenizers = { version = "0.19.1", features = ["http"] }
thiserror = "1.0.61"
accelerate-src = { version = "0.3.2" }
intel-mkl-src = { version = "0.8.1", features = ["mkl-static-lp64-iomp"] }
