[workspace]
members = [
    "candle-holder",
    "candle-holder-examples",
    "candle-holder-models",
    "candle-holder-pipelines",
    "candle-holder-tokenizers",
    "candle-holder-serve",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Gabriel Martín Blázquez"]
description = "transformers-like library for Rust using candle"
keywords = ["nlp", "transformers", "rust", "candle"]
categories = ["science"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
anyhow = { version = "1.0.86" }
candle-core = { version = "0.6.0" }
candle-nn = { version = "0.6.0" }
candle-metal-kernels = { version = "0.6.0" }
candle-flash-attn = { version = "0.6.0" }
dyn-fmt = "0.4.0"
hf-hub = "0.3.2"
lazy_static = "1.4.0"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
tokenizers = { version = "0.20.0", features = ["http"] }
thiserror = "1.0.61"
accelerate-src = { version = "0.3.2" }
intel-mkl-src = { version = "0.8.1", features = ["mkl-static-lp64-iomp"] }
minijinja = "2.2.0"
minijinja-contrib = { version = "2.2.0", features = ["pycompat"] }
clap = { version = "4.5.16", features = ["derive"] }
axum = { version = "0.7.5", features = ["http2"] }
tokio = { version = "1.40.0", features = ["full"] }
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.18" }
rand = "0.8.5"
