[package]
name = "candle-holder-models"
version.workspace = true
edition.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
readme = "README.md"

[dependencies]
candle-holder = { path = "../candle-holder", version = "0.1.0" }
candle-core = { workspace = true }
candle-nn = { workspace = true }
candle-metal-kernels = { workspace = true, optional = true }
candle-flash-attn = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
hf-hub = { workspace = true }

[features]
metal = ["candle-core/metal", "candle-nn/metal", "candle-metal-kernels"]
flash-attn = ["candle-flash-attn"]
