[package]
name = "candle-holder-models"
version.workspace = true
edition.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
readme = "README.md"

[dependencies]
candle-holder = { path = "../candle-holder", version = "0.1.0" }
candle-holder-tokenizers = { path = "../candle-holder-tokenizers", version = "0.1.0", optional = true }
candle-core = { workspace = true }
candle-nn = { workspace = true }
candle-metal-kernels = { workspace = true, optional = true }
candle-flash-attn = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
hf-hub = { workspace = true }
rand = "0.8.5"

[features]
tokenizers = ["candle-holder-tokenizers"]
metal = ["candle-core/metal", "candle-nn/metal", "candle-metal-kernels"]
cuda = ["candle-core/cuda", "candle-nn/cuda"]
cudnn = ["candle-core/cudnn"]
accelerate = ["candle-core/accelerate", "candle-nn/accelerate"]
mkl = ["candle-core/mkl", "candle-nn/mkl"]
flash-attn = ["candle-flash-attn"]
