[package]
name = "candle-holder-serve"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
candle-holder = { path = "../candle-holder", version = "0.1.0" }
candle-holder-models = { path = "../candle-holder-models", version = "0.1.0", features = [
    "tokenizers",
] }
candle-holder-tokenizers = { path = "../candle-holder-tokenizers", version = "0.1.0" }
candle-holder-pipelines = { path = "../candle-holder-pipelines", version = "0.1.0" }
candle-core = { workspace = true }
candle-nn = { workspace = true }
accelerate-src = { workspace = true, optional = true }
intel-mkl-src = { workspace = true, optional = true }

[features]
metal = ["candle-core/metal", "candle-holder-models/metal"]
cuda = ["candle-core/cuda", "candle-holder-models/cuda"]
cudnn = ["candle-core/cudnn", "candle-holder-models/cudnn"]
accelerate = ["dep:accelerate-src", "candle-holder-models/accelerate"]
mkl = ["dep:intel-mkl-src", "candle-holder-models/mkl"]
flash-attn = ["candle-holder-models/flash-attn"]
