[package]
name = "candle-holder-tokenizers"
version.workspace = true
edition.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
readme = "README.md"

[dependencies]
candle-holder = { path = "../candle-holder", version = "0.1.0" }
candle-core = { workspace = true }
tokenizers = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hf-hub = { workspace = true }
lazy_static = { workspace = true }
minijinja = { workspace = true }
minijinja-contrib = { workspace = true }
