[package]
name = "candle-holder"
version.workspace = true
edition.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
readme = "README.md"

[dependencies]
anyhow = { workspace = true }
candle-core = { workspace = true }
candle-nn = { workspace = true }
candle-metal-kernels = { workspace = true, optional = true }
candle-flash-attn = { workspace = true, optional = true }
dyn-fmt = { workspace = true }
hf-hub = { workspace = true }
lazy_static = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokenizers = { workspace = true }
thiserror = { workspace = true }

[features]
metal = ["candle-core/metal", "candle-nn/metal", "candle-metal-kernels"]
flash-attn = ["candle-flash-attn"]
